api.log
Traceback (most recent call last):
  File "/usr/lib/python3.10/runpy.py", line 196, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/usr/lib/python3.10/runpy.py", line 86, in _run_code
    exec(code, run_globals)
  File "/home/phoenix/Documents/manticore-trading/api/__main__.py", line 10, in <module>
    from monitor import monitor_transactions
  File "/home/phoenix/Documents/manticore-trading/monitor/__init__.py", line 117
    await conn.execute(
    ^^^^^
IndentationError: expected an indented block after 'with' statement on line 115
